# slate

./: .gitignore  index.html  package.json  pnpm-lock.yaml  vite.config.js  vite.config.js.timestamp-1679481298015.mjs
public/mp3/: 夏天的风-刘瑞琦.m4a  大笨钟-刘瑞琦.m4a
src/: App.vue  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: invoke.rs  lib.rs  main.rs
src-tauri/src/models/: mod.rs
src/assets/css/: base.css
src/components/: Card.vue  Loader.vue  Menus.vue  MusicItem.vue  Nav.vue  Player.vue  RightClkMenu.vue  SongList.vue  VolumeStrip.vue
src/components/search/: ArtistItem.vue  Box.vue  List.vue
src/components/table/: Table.vue  TableItem.vue
src/router/: index.js
src/stores/: music.js  playList.js  playQueue.js  search.js  sys.js  topList.js  user.js
src/tests/tools/: req.test.js
src/tools/: debounce.js  req.js  user.js
src/view/: Album.vue  Artist.vue  Home.vue  Like.vue  Login.vue  Main.vue  PlayList.vue  PlayQueue.vue  Search.vue
